--- a/css/main.css
+++ b/css/main.css
@@ -253,7 +253,8 @@
   position: absolute;
   bottom: -9px;
   width: 100%;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  height: 2px;
+  background: rgba(255, 255, 255, 0.3);
   content: "";
 }
 
