--- a/css/sub.css
+++ b/css/sub.css
@@ -175,15 +175,6 @@
   border-bottom: 1px solid #ddd;
 }
 
-/* .grid-box-wrap .grid-box div.title::after {
-  display: block;
-  width: 100%;
-  padding: 30px 25px 0;
-  margin-left: -25px;
-  border-bottom: 1px solid #ddd;
-  content: "";
-} */
-
 .grid-box-wrap .grid-box .title h3 {
   padding-bottom: 12px;
 }
@@ -600,6 +591,7 @@ td.tab-con-wrap {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
   width: 100%;
   height: 70px;
   padding: 0 20px;
@@ -628,12 +620,14 @@ td.tab-con-wrap {
 .accordion-box .ac-title span:nth-child(2) {
   min-width: 75px;
   margin-left: 15px;
+  margin-right: 30px;
 }
 
 .accordion-box .ac-title::after {
   display: block;
+  position: absolute;
+  right: 20px;
   width: 12px;
-  min-width: 12px;
   height: 12px;
   margin-top: -9px;
   margin-left: 40px;
@@ -748,8 +742,11 @@ td.tab-con-wrap {
 }
 
 /* ------ login-wrap ------ */
-.login-wrap {
+.no-scroll {
   overflow: hidden;
+}
+
+.login-wrap {
   position: relative;
   display: flex;
   justify-content: center;
@@ -758,12 +755,13 @@ td.tab-con-wrap {
   padding: 0 20px;
   box-sizing: border-box;
 }
-.loaded .login-wrap {
+
+/* .loaded .login-wrap {
   overflow: auto;
-}
+} */
 
 .login-wrap::before {
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
   top: 0;
@@ -1265,7 +1263,7 @@ td.offer-con {
   }
 
   .login-wrap .form-box .box-body {
-    margin-bottom: 73px;
+    margin-bottom: 51px;
   }
 
   .login-wrap .form-box .form-row input {
@@ -1621,8 +1619,13 @@ td.offer-con {
     margin-bottom: 10px;
   }
 
+  .login-wrap {
+    height: auto;
+    min-height: 0;
+    padding-top: 100px;
+  }
+
   .login-wrap.user-find {
-    overflow: auto;
     flex-wrap: wrap;
     align-items: flex-start;
     padding: 100px 15px 60px;
@@ -1704,6 +1707,14 @@ td.offer-con {
     font-size: 12px;
   }
 
+  .sub-wrap .contents-wrap {
+    padding-top: 50px;
+  }
+
+  .contents-wrap .contents.top-line {
+    padding-top: 40px;
+  }
+
   .contents-wrap h3 {
     padding-bottom: 12px;
     font-size: 21px;
@@ -1754,15 +1765,38 @@ td.offer-con {
   }
 
   .app_comp h4 {
+    margin-bottom: 15px;
     word-wrap: break-word;
     word-break: keep-all;
-    font-size: 24px;
+    font-size: 18px;
   }
 
   .app_comp p {
     word-wrap: break-word;
     word-break: keep-all;
-    font-size: 16px;
+    font-size: 13px;
+    margin-bottom: 15px;
+    line-height: 1.4;
+  }
+
+  .app_comp .info-box {
+    padding: 18px;
+    margin-bottom: 12px;
+  }
+
+  .app_comp a {
+    font-size: 14px;
+  }
+
+  .app_comp .txt-info {
+    width: 280px;
+    margin: 0 auto;
+    font-size: 12px;
+    letter-spacing: -.07em;
+  }
+
+  .app_comp .txt-info br {
+    display: none;
   }
 
   .app_comp li {
@@ -1787,6 +1821,11 @@ td.offer-con {
 
   .prev-slide .slick-wrapper .slick-prev {
     left: -55px;
+  }
+
+  .tab-title .input-rdo {
+    margin-right: 5px;
+    width: calc(33.333% - 3.333px);
   }
 
   .tab-title .input-rdo input[type="radio"]:checked + label::before {
@@ -1815,6 +1854,14 @@ td.offer-con {
 
   .offer-con .offer-list li {
     font-size: 13px;
+  }
+
+  .offer-con .offer-list:last-child li {
+    margin-bottom: 4px;
+  }
+
+  .offer-con .offer-list:last-child li:last-child {
+    margin-bottom: 0;
   }
 
   .form-table .price {
@@ -1860,6 +1907,68 @@ td.offer-con {
     padding-left: 47px;
     text-indent: -47px;
   }
+
+  .grid-box-wrap .grid-box {
+    min-height: 160px;
+  }
+
+  .grid-box-wrap .grid-box .title {
+    padding-bottom: 10px;
+    font-size: 21px;
+  }
+
+  .grid-box-wrap .grid-con p {
+    font-size: 16px;
+  }
+
+  .grid-box-wrap .grid-box .grid-con .major-txt {
+    font-size: 24px;
+    margin-bottom: 0;
+  }
+
+  .grid-box-wrap .grid-box .grid-con .small-txt {
+    font-size: 14px;
+  }
+
+  .grid-box-wrap .grid-box .title h3 {
+    padding-bottom: 5px;
+  }
+
+  .grid-box-wrap .grid-box .title p {
+    font-size: 12px;
+  }
+
+  .accordion-box .ac-title {
+    padding-left: 10px;
+    font-size: 14px;
+  }
+
+  .accordion-box .ac-title.active span:first-child {
+    font-size: 15px;
+  }
+
+  .accordion-box .ac-title span:nth-child(2) {
+    margin-right: 12px;
+  }
+  
+  .accordion-box .ac-title::after {
+    right: 10px;
+    width: 8px;
+    height: 8px;
+  }
+
+  .accordion-box li .ac-con {
+    padding: 12px 10px;
+  }
+
+  .accordion-box li .ac-con p {
+    font-size: 14px;
+  }
+
+  .accordion-box li .ac-con .file {
+    margin-top: 10px;
+  }
+
 }
 
 @media screen and (max-width: 320px) {
