--- a/css/sub.css
+++ b/css/sub.css
@@ -758,10 +758,6 @@ td.tab-con-wrap {
   box-sizing: border-box;
 }
 
-/* .loaded .login-wrap {
-  overflow: auto;
-} */
-
 .login-wrap::before {
   position: fixed;
   left: 0;
@@ -1700,21 +1696,21 @@ td.offer-con {
 
 @media screen and (max-width: 480px) {
   .visual .visual-inner {
-    height: 115px;
-    padding-top: 30px;
+    height: 125px;
+    padding-top: 35px;
   }
 
   .visual h2 {
-    font-size: 18px;
+    font-size: 22px;
   }
 
   .visual p {
-    padding-top: 28px;
+    padding-top: 31px;
     font-size: 12px;
   }
 
   .sub-wrap .contents-wrap {
-    padding-top: 50px;
+    padding-top: 30px;
   }
 
   .contents-wrap .contents.top-line {
@@ -1755,6 +1751,22 @@ td.offer-con {
 
   .login-wrap .form-box .box-foot .btn {
     font-size: 14px;
+  }
+
+  .form-row {
+    margin-bottom: 5px;
+  }
+
+  .login-wrap .form-row.sp-btw {
+    margin-top: 10px;
+  }
+
+  .login-wrap .form-row.col-half .input-wrap:first-child {
+    margin-bottom: 5px;
+  }
+
+  .login-wrap .form-box .form-row .btn {
+    margin-left: 5px;
   }
 
   .sample-list li {
@@ -1810,9 +1822,9 @@ td.offer-con {
   }
 
   .prev-slide .slick-wrapper {
-    width: 198px;
+    /* width: 198px;
     height: 398px;
-    padding: 35px 9px 45px;
+    padding: 35px 9px 45px; */
   }
 
   .prev-slide .slick-wrapper .slick-arrow {
@@ -1917,11 +1929,12 @@ td.offer-con {
   .grid-box-wrap .grid-box {
     min-height: 190px;
     padding: 20px;
-    margin-bottom: 15px;
+    margin-bottom: 9px;
+    box-shadow: 2px 3px 10px 0px rgba(0, 0, 0, 0.1)
   }
 
   .grid-box-wrap .grid-box .title {
-    padding-bottom: 10px;
+    padding-bottom: 15px;
     font-size: 20px;
   }
 
@@ -1960,6 +1973,7 @@ td.offer-con {
   }
 
   .accordion-box .ac-title {
+    height: 60px;
     padding-left: 10px;
     font-size: 15px;
   }
@@ -1993,6 +2007,15 @@ td.offer-con {
 
   .accordion-box li .ac-con .file {
     margin-top: 10px;
+  }
+
+  .accordion-box ~ .con-btm {
+    padding: 20px 0 0;
+  }
+
+  .accordion-box ~ .con-btm .btn {
+    height: 2.8em;
+    font-size: 15px;
   }
 
   .empty-list {
